examples/test/testpolicy781.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy781
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key5: value2
      key20: value34
      key4: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value38
      podSelector:
        matchLabels:
          key48: value10
          key25: value43
          key7: value35
